--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27752202_922798791223243
 footer-links:
   dribbble:
   email: subhendumalakar19@gmail.com
-  facebook: https://www.facebook.com/subhendu.malakar.1
+  facebook: subhendu.malakar.1
   flickr:
   github: github.com/subhenduMalakar
   instagram:
   linkedin: https://www.linkedin.com/in/subhendumalakar/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
