--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: github.com/subhenduMalakar
   instagram:
-  linkedin: https://www.linkedin.com/in/subhendumalakar/
+  linkedin: subhendumalakar
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
