--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Subhendu Malakar
 description: I am a student of AEIE B-tech and I love Deep Learning 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://scontent.fccu3-1.fna.fbcdn.net/v/t1.0-9/27752202_922798791223243_8021571268095051473_n.jpg?oh=9935a3076c0b445020d3ebd03b0b7bd3&oe=5B0E8221
-
+avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/220px-User_icon_2.svg.png
 #
 # Flags below are optional
 #
