--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,13 @@ avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.sv
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: subhendumalakar19@gmail.com
-  facebook: subhendu.malakar.1
+  
+  facebook: 
   flickr:
   github: github.com/subhenduMalakar
   instagram:
   linkedin: subhendumalakar
+  email: subhendumalakar19@gmail.com
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
@@ -46,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/subhendumalakar"
 
 #
 # !! You don't need to change any of the configuration flags below !!
